--- a/src/styles/pokemon.css
+++ b/src/styles/pokemon.css
@@ -24,7 +24,7 @@ main > h2 {
 }
 
 .loading {
-  display: none;
+  display: block;
   position: relative;
   height: 100px;
 }
@@ -43,8 +43,9 @@ main > h2 {
 }
 
 .list {
-  display: grid;
+  display: none;
   grid-template-columns: repeat(4, minmax(150px, 1fr));
+  grid-auto-rows: 225px;
   gap: 0.5rem;
 }
 
@@ -58,6 +59,10 @@ main > h2 {
   gap: 5px;
 }
 
+.card > div {
+  margin-bottom: auto;
+}
+
 .card > div > img {
   width: 100%;
   height: auto;
@@ -65,6 +70,10 @@ main > h2 {
 
 .card > p {
   align-self: flex-start;
+}
+
+.card > p::first-letter {
+  text-transform: uppercase;
 }
 
 @keyframes l3 {
